RESOLVED FIXED255421
[UI Side Compositing] REGRESSION: fast/scrolling/scroll-animator tests are failing (need ScrollbarsControllerMock logging)
https://bugs.webkit.org/show_bug.cgi?id=255421
Summary [UI Side Compositing] REGRESSION: fast/scrolling/scroll-animator tests are fa...
Nikos Mouchtaris
Reported 2023-04-13 16:24:54 PDT
[UI Side Compositing] REGRESSION: fast/scrolling/scroll-animator tests are failing (need ScrollbarsControllerMock logging)
Attachments
Nikos Mouchtaris
Comment 1 2023-04-13 16:28:58 PDT
Nikos Mouchtaris
Comment 2 2023-04-13 16:31:01 PDT
EWS
Comment 3 2023-04-13 22:13:22 PDT
Committed 262945@main (8640c2ed1f9e): <https://commits.webkit.org/262945@main> Reviewed commits have been landed. Closing PR #12717 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.