[UI Side Compositing] REGRESSION: fast/scrolling/scroll-animator tests are failing (need ScrollbarsControllerMock logging) https://bugs.webkit.org/show_bug.cgi?id=255421 rdar://107345364

Reviewed by Simon Fraser.

Prevent creation of a RemoteScrollbarsController if mock scrollbars are enabled, so we can
create a MockScrollbarsController instead.

* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::createScrollbarsController const):

Canonical link: https://commits.webkit.org/262945@main